# suumo-analysis

./: .gitignore  clean_data.py  clean_outlier.py  display_plot.py  logger.py  made_model.py  main.py  model.py  pyproject.toml  scrape.py
