[tool.poetry]
name = "suumo-analysis"
version = "0.1.0"
description = ""
authors = ["imnoida <82698327+imnoida@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.11,<3.13"
pandas = "^2.1.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
matplotlib = "^3.8.0"
types-requests = "^2.31.0.10"
types-beautifulsoup4 = "^4.12.0.6"
mypy = "^1.6.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.10.1"

[tool.ruff]
select = ["ALL"]

[tool.mypy]
python_version = "3.10"
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_expr = true
disallow_any_unimported = true
strict = true
warn_incomplete_stub = true
warn_unreachable = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
