[tool.poetry]
name = "suumo-analysis"
version = "0.1.0"
description = ""
authors = ["imnoida <82698327+imnoida@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.11,<3.13"
pandas = "^2.1.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
matplotlib = "^3.8.0"
types-requests = "^2.31.0.10"
types-beautifulsoup4 = "^4.12.0.6"
mypy = "^1.6.1"
tenacity = "^8.2.3"
tqdm = "^4.66.1"
pandas-stubs = "^2.1.1.230928"
types-tqdm = "^4.66.0.2"
lxml = "^4.9.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.10.1"

[tool.ruff]
select = ["ALL"]

[tool.mypy]
python_version = "3.10"
strict = true
disable_error_code = ["union-attr"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
